oop_mro/tests/trybuild/fail_base_cast_unrelated.stderr
error[E0599]: no method named `as_walker` found for struct `Cat` in the current scope
  --> tests/trybuild/fail_base_cast_unrelated.rs:11:17
   |
 3 | / oop_class! {
 4 | |     class Animal {}
 5 | |     class Walker {}
 6 | |     class Cat: Animal {}
   | |_____________- method `as_walker` not found for this struct
...
11 |       let _ = cat.as_walker();
   |                   ^^^^^^^^^ method not found in `Cat`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `AsWalker` defines an item `as_walker`, perhaps you need to implement it
  --> tests/trybuild/fail_base_cast_unrelated.rs:3:1
   |
 3 | / oop_class! {
 4 | |     class Animal {}
 5 | |     class Walker {}
 6 | |     class Cat: Animal {}
 7 | | }
   | |_^
   = note: this error originates in the macro `oop_class` (in Nightly builds, run with -Z macro-backtrace for more info)
